HTML/CSS modified, created event.js
Formed 'gameBoard' using divs and CSS
- created event.js, made player variables
-began writing code to connect JS to HTML

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Tic Tac A TOE</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -11,7 +11,25 @@
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
+    <header>
+      <h1>Super Tic-Tac-Bros.</h1>
+    </header>
+
+    <p class="message"></p>
+
     <body>
-      <h1>Browser Template</h1>
+
+      <div class="board" id="gameBoard">
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+        <div class="box">4</div>
+        <div class="box">5</div>
+        <div class="box">6</div>
+        <div class="box">7</div>
+        <div class="box">8</div>
+        <div class="box">9</div>
+      </div>
+
     </body>
 </html>
