--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <body>
 
       <div class="board" id="gameBoard">
-        <div class="box">''</div>
-        <div class="box">''</div>
-        <div class="box">''</div>
-        <div class="box">''</div>
-        <div class="box">''</div>
-        <div class="box">''</div>
-        <div class="box">''</div>
-        <div class="box">''</div>
-        <div class="box">''</div>
+        <div class="box" id='1' type='click'></div>
+        <div class="box" id='2' type='click'></div>
+        <div class="box" id='3' type='click'></div>
+        <div class="box" id='4' type='click'></div>
+        <div class="box" id='5' type='click'></div>
+        <div class="box" id='6' type='click'></div>
+        <div class="box" id='7' type='click'></div>
+        <div class="box" id='8' type='click'></div>
+        <div class="box" id='9' type='click'></div>
       </div>
 
     </body>
