Additions to app.js
-only one box can be clicked at a time
-alternates between players on click
   -received help from colleague
-discovered how to make move count increase with each click
-GOOD JOB!!

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <!--token-auth training-->
 
-      <div class="board" id="gameBoard">
+      <div id="game">
         <div class="box" id='1' type='click'></div>
         <div class="box" id='2' type='click'></div>
         <div class="box" id='3' type='click'></div>
