--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       </form>
 
       <!--token-auth training-->
+<!--<img src='public/Question_Block_NSMB.png' height=200px width=200px>-->
 
       <div id="game">
         <div class="box" id='1' type='click'></div>
@@ -61,5 +62,6 @@
         <div class="box" id='9' type='click'></div>
       </div>
 
+      <button id="retry" type="button">Retry</button>
     </body>
 </html>
