--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
       <!--token-auth training-->
 
+      <button id="new-game" type="button">New Game</button>
+
       <div id="game">
         <div class="box" id='1' type='click'></div>
         <div class="box" id='2' type='click'></div>
