--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
         </fieldset>
       </form>
 
+      <form id="change-password" class="border">
+      <fieldset>
+        <legend>Change Password</legend>
+          <input type="password" name="passwords[old]" placeholder="Old Password">
+          <input type="password" name="passwords[new]"
+           placeholder="New Password">
+          <input type="submit" value="Change password">
+      </fieldset>
+    </form>
+
       <form id="sign-out" class="border">
         <fieldset>
             <input type="submit" value="Sign Out">
