Final commit before first presentation
-Completed README.md
-Changed `.one` function to `.on` so clicking twice is now a bug
-`.empty` is being used to clear bored after result is posted
  -doesn't remove move count and players box selection
  -causes odd results on second game; requires page reload
-being merged to master branch and uploaded

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
     <body>
-
+      <!-- Results Modal w/ board reset -->
       <div class="modal fade" id="result">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -28,7 +28,7 @@
                 <h5 id="phrase"></h5>
                 </div>
               <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-dismiss="save">New Game</button>
+              <button type="button" id="newGame" class="btn btn-primary" data-dismiss="modal">New Game</button>
               </div>
             </div>
           </div>
@@ -90,7 +90,7 @@
                 <!--token-auth training-->
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="save">Save</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
               </div>
             </div>
           </div>
