Initial commit after presentation
-created new game/events1.1 to alter coding from prior event
  -finally got player to click once on box
  -game results still show properly
- began adding starting the game features in api

To Do:
Game-
  -need to reset, no reload, board after game ends
  -make buttons work for New Game, Sign Up
  -create new game on server
  -update game to server
  -show total game wins for each player
  -show player turn
Auth-
  -make Sign Out and Change Password hide when not signed in
  -make Sign Up and Sign In hide when signed in success
  -clear forms after success
  -logout shouldn't reload page

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         </div>
       <!--Modal-->
 
-
-      <button id="new-game" type="button">New Game</button>
+      <!--GAME-->
+      <button id="create-game" type="button">Create Game</button>
 
       <div id="game">
         <div class="box" id='0' type='click'></div>
