Small change to nextGame
-index.html changed 'new-game' to 'next-game'
-'events1.1.js' commented out concsole.logs in nextGame function

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h5 id="phrase"></h5>
                 </div>
               <div class="modal-footer">
-              <button type="button" id="next-game" class="btn btn-primary" data-dismiss="modal">New Game</button>
+              <button type="button" id="next-game" class="btn btn-primary" data-dismiss="modal">Next Game</button>
               </div>
             </div>
           </div>
