--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
         </div>
       </div>
 
+      <!-- Welcome Message -->
+      <div class="welcome-message">
+        <h2>Welcome to Super Tic-Tac-Bros!</h2>
+        <p>The rules are easy:</p>
+          <ul>
+            <li>Sign up* then sign in to join the game</li>
+            <li>Mario begins the game by selecting a square (choose wisely!)</li>
+            <li>Luigi follows up with a selection of their own square</li>
+            <li>Then Mario goes for their second turn, followed by Luigi's turn</li>
+            <li>Each brother follows that pattern until a tie or one becomes the winner!</li>
+            <li>Winner goes to whom ever is able to have three connected squares</li>
+            <li>Good luck and have fun!</li>
+          </ul>
+        <p>*PLEASE DO NOT use your actual email or password</p>
+      </div>
+
+      <!-- Displayed User email -->
       <p id="username"></p>
 
 
